# Licenta

./: README.md  point_cloud_data.pcd
data_receiving_tests/: SerialCommTest.py
documentation/design/: README.md  design.docx
documentation/testing/: testing.docx  testing.readme
robot_control/Licenta/: .cproject
robot_control/Licenta/Debug/: Licenta.axf  Licenta.map  Licenta_Debug.ld  Licenta_Debug_library.ld  Licenta_Debug_memory.ld  makefile
robot_control/Licenta/Debug/board/: board.d  clock_config.d  subdir.mk
robot_control/Licenta/Debug/component/lists/: subdir.mk
robot_control/Licenta/Debug/component/serial_manager/: fsl_component_serial_manager.su  subdir.mk
robot_control/Licenta/Debug/component/uart/: fsl_adapter_lpuart.d  fsl_adapter_lpuart.su  subdir.mk
robot_control/Licenta/Debug/device/: subdir.mk
robot_control/Licenta/Debug/drivers/: fsl_adc12.su  fsl_common_arm.d  fsl_ftm.d  fsl_ftm.su  fsl_gpio.d  fsl_gpio.su  fsl_lpi2c.d  fsl_lpspi.d  fsl_lpspi.su  fsl_lpuart.su  fsl_pwt.su  fsl_smc.d  fsl_trgmux.d  subdir.mk
robot_control/Licenta/Debug/drivers/freertos/: subdir.mk
robot_control/Licenta/Debug/freertos/freertos-kernel/: event_groups.su  queue.su  stream_buffer.su  subdir.mk
robot_control/Licenta/Debug/rbwsFreeRTOS/src/: rbwsFreeRTOS.d  rbwsFreeRTOS.su  subdir.mk
robot_control/Licenta/Debug/rbwsInertialMeasurementUnit/src/: rbwsI2C.su  rbwsMPU6050.d  rbwsMPU6050.su  subdir.mk
robot_control/Licenta/Debug/rbwsKalmanFilter/src/: rbwsKalmanFilter.d  rbwsKalmanFilter.su  rbwsKalmanFilter_Matrix_Operations.su  subdir.mk
robot_control/Licenta/Debug/rbwsLidarA1M8/src/: rbwsLidarA1M8_main.d  rbwsLidarA1M8_main.su  subdir.mk
robot_control/Licenta/Debug/rbwsMotorControl/src/: rbwsMotorControl.d  rbwsMotorControl.su  subdir.mk
robot_control/Licenta/Debug/rbwsPWT/src/: rbwsPWT.su  subdir.mk
robot_control/Licenta/Debug/source/: Licenta.d  Licenta.su  subdir.mk
robot_control/Licenta/Debug/startup/: startup_mke16z4.su  subdir.mk
robot_control/Licenta/Debug/utilities/: fsl_assert.d  fsl_debug_console.su  fsl_str.su  subdir.mk
robot_control/Licenta/board/: peripherals.c  pin_mux.c
robot_control/Licenta/rbwsFreeRTOS/inc/: rbwsFreeRTOS.h
robot_control/Licenta/rbwsFreeRTOS/src/: rbwsFreeRTOS.c
robot_control/Licenta/rbwsInertialMeasurementUnit/inc/: rbwsI2C.h  rbwsMPU6050.h
robot_control/Licenta/rbwsInertialMeasurementUnit/src/: rbwsI2C.c  rbwsMPU6050.c
robot_control/Licenta/rbwsKalmanFilter/inc/: rbwsKalmanFilter.h  rbwsKalmanFilter_Matrix_Operations.h
robot_control/Licenta/rbwsKalmanFilter/src/: rbwsKalmanFilter.c  rbwsKalmanFilter_Matrix_Operations.c
robot_control/Licenta/rbwsLidarA1M8/inc/: rbwsLidarA1M1_def.h  rbwsLidarA1M8_api.h  rbwsLidarA1M8_inc.h
robot_control/Licenta/rbwsLidarA1M8/src/: rbwsLidarA1M8_main.c
robot_control/Licenta/rbwsMotorControl/inc/: rbwsMotorControl.h
robot_control/Licenta/rbwsMotorControl/src/: rbwsMotorControl.c
robot_control/Licenta/rbwsPWT/inc/: rbwsPWT.h
robot_control/Licenta/rbwsPWT/src/: rbwsPWT.c
robot_control/Licenta/source/: Licenta.c
ros2_jazzy/src/: working_steps.txt
ros2_jazzy/src/imu_data/src/: imu_data_node.py
ros2_jazzy/src/lidar_data/src/: lidar_data_node.py
slam_processing/Licenta-main/ros2_jazzy/slam_processing/Licenta-main/ros2_jazzy/src/encoder_data/: package.xml
slam_processing/Licenta-main/ros2_jazzy/src/: working_steps.txt
slam_processing/Licenta-main/ros2_jazzy/src/common_serial_service/: CMakeLists.txt  package.xml
slam_processing/Licenta-main/ros2_jazzy/src/imu_data/: CMakeLists.txt  package.xml
slam_processing/Licenta-main/ros2_jazzy/src/lidar_data/: CMakeLists.txt
slam_processing/Licenta-main/ros2_jazzy/src/my_mapping_package/: CMakeLists.txt  package.xml
slam_processing/Licenta-main/ros2_jazzy/src/my_mapping_package/launch/: slam_toolbox_launch.py
slam_processing/Licenta-main/ros2_jazzy/src/my_mapping_package/rviz/: rviz_map_visualization_config.rviz
slam_processing/Licenta-main/ros2_jazzy/src/my_mapping_package/src/: lidar_data_node.py  serial_reader_service.py
src/: README.md
src/robot_control/Licenta/: .project  Licenta LinkServer Debug.launch  Licenta.mex  README.md
src/robot_control/Licenta/Debug/: Licenta.map  Licenta_Debug.ld  Licenta_Debug_library.ld  Licenta_Debug_memory.ld  sources.mk
src/robot_control/Licenta/Debug/board/: clock_config.su  peripherals.d  peripherals.su  pin_mux.d  pin_mux.su  subdir.mk
src/robot_control/Licenta/Debug/device/: subdir.mk  system_MKE16Z4.d  system_MKE16Z4.su
src/robot_control/Licenta/Debug/drivers/: fsl_adc12.d  fsl_clock.d  fsl_clock.su  fsl_common.d  fsl_common_arm.su  fsl_lpi2c.su  fsl_lpuart.d  fsl_pwt.d  fsl_smc.su  (+1 more)
src/robot_control/Licenta/board/: clock_config.c  clock_config.h  peripherals.h
src/robot_control/Licenta/drivers/: fsl_ftm.c  fsl_lpuart.h
src/robot_control/Licenta/source/: FreeRTOSConfig.h  Licenta.c
src/slam_processing/Licenta-main/data_receiving_tests/: point_cloud_data.txt  test.txt
(+60 files in other folders)
