<?xml version="1.0"?>
<package format="3">
  <name>common_serial_service</name>
  <version>0.0.0</version>
  <description>Common serial service for IMU and Lidar data processing</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>pyserial</depend>
  
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
