<?xml version="1.0"?>
<package format="3">
  <name>imu_data</name>
  <version>0.0.0</version>
  <description>The imu_data package</description>
  <maintainer email="evelynplesca@gmail.com">evelyn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
